# amc-peripheral

./: .gitignore  BACKLOG.md  CONTRIBUTING.md  README.md  flake.nix  pyproject.toml  route.html
.github/workflows/: ci.yml  discord-notify.yml  notify-parent.yml
amc_peripheral/: db.py  settings.py
amc_peripheral/bot/: ai_models.py  bot.py  game_db.py  knowledge_cog.py  translation_cog.py  utils_cog.py
amc_peripheral/devbot/: __init__.py  codebase_tools.py  devbot.py  devbot_cog.py
amc_peripheral/memory/: __init__.py  retrieval.py  storage.py
amc_peripheral/radio/: liquidsoap.py  radio.py  radio_cog.py  radio_server.py  tts.py
amc_peripheral/utils/: discord_utils.py  game_utils.py  json_utils.py  rate_limiter.py  save.py  text_utils.py
docs/: azuracast_migration_plan.md  knowledge-base-optimization.md  memory-system.md
radio/: liquidsoap.nix
scripts/: pre-push
tests/: test_db.py  test_knowledge_cog.py  test_knowledge_cog_init.py  test_memory_storage.py  test_radio_admin.py  test_radio_cog.py  test_radio_cog_announcements.py  test_radio_server.py  test_translation_cog.py  test_utils_cog_tasks.py
